--- a/doc/user_manual/user_manual.tex
+++ b/doc/user_manual/user_manual.tex
@@ -255,7 +255,7 @@ showstringspaces=false            %
 %
 \SANDnum{INL/EXT-XX-XXXXX}
 \SANDprintDate{\today}
-\SANDauthor{Diego Mandelli and Congjian Wang}
+\SANDauthor{Congjian Wang and Diego Mandelli}
 \SANDreleaseType{Revision 0}
 \def\component#1{\texttt{#1}}
 
