update user manual according to editor review

--- a/doc/user_manual/include/ETdataImporter.tex
+++ b/doc/user_manual/include/ETdataImporter.tex
@@ -1,10 +1,10 @@
 \section{ET Data Importer}
 \label{sec:ETdataImporter}
 
-This Post-Processor is designed to import an ET as a PointSet in RAVEN.
-The ET must be specified in a specific format: the OpenPSA format (\href{<url>}{https://github.com/open-psa}). 
-The details about this post-processors can be found in raven user manual subsection \textbf{PostProcessor}
-of section \textbf{Models}.
+This post-processor is designed to import an ET as a PointSet in RAVEN.
+The ET must be in: the OpenPSA format (\href{<url>}{https://github.com/open-psa}).
+The details about this post-processor can be found in RAVEN user manual subsection \textbf{PostProcessor}
+in the \textbf{Models} section.
 
 \subsection{ET Importer reference tests}
 \begin{itemize}
@@ -15,5 +15,5 @@ of section \textbf{Models}.
 	\item test\_ETimporter\_DefineBranch.xml
 	\item test\_ETimporter\_3branches.xml
 	\item test\_ETimporter\_3branches\_NewNumbering.xml
-	\item test\_ETimporter\_3branches\_NewNumbering\_expanded.xml
+	\item test\_ETimporter\_3branches\_NewNumbering\_expanded.xml.
 \end{itemize}
