--- a/doc/user_manual/include/FTdataImporter.tex
+++ b/doc/user_manual/include/FTdataImporter.tex
@@ -1,10 +1,10 @@
 \section{FT Data Importer}
 \label{sec:FTdataImporter}
 
-This Post-Processor is designed to import a FT as a PointSet in RAVEN.
-The FT must be specified in a specific format: the OpenPSA format (\href{<url>}{https://github.com/open-psa}). 
-The details about this post-processors can be found in raven user manual subsection \textbf{PostProcessor}
-of section \textbf{Models}.
+This post-processor is designed to import a FT as a PointSet in RAVEN.
+The FT must be in: the OpenPSA format (\href{<url>}{https://github.com/open-psa}).
+The details about this post-processor can be found in RAVEN user manual subsection \textbf{PostProcessor}
+in the \textbf{Models} section.
 
 \subsection{FT Importer reference tests}
 \begin{itemize}
@@ -24,5 +24,5 @@ of section \textbf{Models}.
 	\item test\_FTimporter\_not.xml
 	\item test\_FTimporter\_or\_houseEvent.xml
 	\item test\_FTimporter\_or.xml
-	\item test\_FTimporter\_xor.xml
+	\item test\_FTimporter\_xor.xml.
 \end{itemize}
