--- a/doc/user_manual/include/DataClassifier.tex
+++ b/doc/user_manual/include/DataClassifier.tex
@@ -3,7 +3,7 @@
 
 The \textbf{DataClassifier} post-processor is specifically used to classify the data stored in the DataObjects.
 The details about this post-processor can be found in RAVEN user manual subsection \textbf{PostProcessor}
-of section \textbf{Models}.
+in the \textbf{Models} section.
 
 \subsection{Data Classifier reference tests}
 \begin{itemize}
