--- a/doc/user_manual/include/ETmodel.tex
+++ b/doc/user_manual/include/ETmodel.tex
@@ -46,10 +46,10 @@ As an example, the ET of Fig.~\ref{fig:ET} is translated in the OpenPSA format a
     \centering
     \centerline{\includegraphics[scale=0.5]{ET.pdf}}
     \caption{Folder tree of Logos repository}
-    \label{fig:Logos}
+    \label{fig:ET}
 \end{figure}
 
-The ET of Fig.~\ref{fig:ET} and defined in Listing~\ref{lst:ETModel} can be defined in the RAVEN input file as follows:
+The ET of Fig.~\ref{fig:ET} described in Listing~\ref{lst:ETModel} can be defined in the RAVEN input file as follows:
 \begin{lstlisting}[style=XML,morekeywords={anAttribute},caption=ET model input example., label=lst:ET_InputExample]
   <Models>
     ...
