--- a/doc/user_manual/include/FTmodel.tex
+++ b/doc/user_manual/include/FTmodel.tex
@@ -62,7 +62,7 @@ As an example, the FT of Fig.~\ref{fig:FT} is translated in the OpenPSA as shown
     \label{fig:FT}
 \end{figure}
 
-The FT of Fig.~\ref{fig:FT} and defined in Listing~\ref{lst:FTModel} can be defined in the RAVEN input file as follows:
+The FT of Fig.~\ref{fig:FT} described in Listing~\ref{lst:FTModel} can be defined in the RAVEN input file as follows:
 
 \begin{lstlisting}[style=XML,morekeywords={anAttribute},caption=FT model input example., label=lst:FT_InputExample]
   <Models>
