--- a/doc/user_manual/include/FTmodel.tex
+++ b/doc/user_manual/include/FTmodel.tex
@@ -94,7 +94,7 @@ nodes that belong to this models are:
 	  \end{itemize}
 \end{itemize}
 
-Provided this definition, the FT model of Fig.~\ref{fig:FT} and described in Listing~\ref{lst:FTmodel},
+Provided this definition, the FT model of Fig.~\ref{fig:FT} and described in Listing~\ref{lst:FT_InputExample},
 the resulting model in RAVEN is characterized by these variables:
 \begin{itemize}
 	\item Input variables: statusBE1, statusBE2, statusBE3, statusBE4
