comment fixes and manual

--- a/doc/user_manual/Introduction.tex
+++ b/doc/user_manual/Introduction.tex
@@ -12,4 +12,5 @@ The features included in this plugin are:
 	\item ET Data Importer (see Section~\ref{sec:ETdataImporter})
 	\item FT Data Importer (see Section~\ref{sec:FTdataImporter})
 	\item Reliability Models (see Section~\ref{sec:ReliabilityModels})
+  \item Maintenance Models (see Section~\ref{sec:MaintenanceModels})
 \end{itemize}
