--- a/doc/user_manual/user_manual.tex
+++ b/doc/user_manual/user_manual.tex
@@ -300,6 +300,7 @@ showstringspaces=false            %
     \input{include/ETdataImporter.tex}
     \input{include/FTdataImporter.tex}
     \input{include/ReliabilityModels.tex}
+    \input{include/MaintenanceModels.tex}
 
     \section*{Document Version Information}
     This document has been compiled using the following version of the plug-in git repository:
