--- a/doc/user_manual/Introduction.tex
+++ b/doc/user_manual/Introduction.tex
@@ -1,4 +1,4 @@
-section{Introduction}
+\section{Introduction}
 \label{sec:Introduction}
 
 SR2ML is a software package which contains a set of safety and reliability models
