update sqa docs

--- a/doc/sqa/srs_rtr_combined/sr2ml_software_requirements_specifications_and_traceability.tex
+++ b/doc/sqa/srs_rtr_combined/sr2ml_software_requirements_specifications_and_traceability.tex
@@ -239,7 +239,7 @@ showstringspaces=false            %
 %
 % Set the title, author, and date
 %
-\title{CashFlow Software Requirements Specification and Traceability Matrix}
+\title{SR2ML Software Requirements Specification and Traceability Matrix}
 %\author{%
 %\begin{tabular}{c} Author 1 \\ University1 \\ Mail1 \\ \\
 %Author 3 \\ University3 \\ Mail3 \end{tabular} \and
